# SnakeRust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: dispatch.yml  rust.yml
examples/: snake-ui.rs
examples/ui/: ui.rs
src/: button.rs  hello_word.rs  main.rs
