[package]
name = "SnakeRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.128.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.33.0"
piston2d-sprite = "0.67.0"
image = "0.24.1"
piston2d-drag_controller = "0.30.0"
piston2d-deform_grid = "0.13.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.33.0"
rand = "0.6.0"
shader_version = "0.7.0"
cgmath = "0.18.0"
gfx_text = "0.31.0"
piston = "0.53.2"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
pistoncore-glutin_window = "0.71.0"
rusttype = "0.9.3"
